mobilestyles.css
@import url('https://fonts.googleapis.com/css2?family=Poppins:wght@300&display=swap');
@import url('https://fonts.googleapis.com/css2?family=Exo+2:wght@500;700&family=Poppins:wght@300&display=swap');

* {
  margin: 0;
  padding: 0;
  font-family: 'Poppins';
}

html, body{
  width: 100%;
  height: 100%;
  margin: 0;
  padding: 0;
}

#mobileHeaderBackground{
  height: 13vh;
  width: 100%;
  background-color: white;
}

#mobileHeaderContentWrapper{
  display: block;
  margin: 0 auto;

}

#mobileHeaderText{
  font-family: 'Exo 2';
  height: 8vh;
  width: 22vh;
  margin: 0;
  padding: 0;
  display: inline-block;
  position: absolute;
  top: 0;
  left: 0vw;
  font-size: 6vh;
  border: 0;
  background-color: white;
  outline: none;
  cursor: pointer;
}

#mobileHeaderImage{
  height: 8vh;
  width: 9vh;
  display: inline-block;
  position: absolute;
  top: 0;
  left: 21vh;
}

#mobileNavButtonContainer{
  height: 5vh;
  position: absolute;
  top: 8vh;
  width: 100%;
}

.mobileNavButton{
  text-align: center;
  width: 25%;
  font-size: 2vh;
  background-color: #ff0000;
  cursor: pointer;
}

.mobileNavButton:active{
  background-color: #020157;
}


#mobileSocialLinks{
  position: absolute;
  top: 2.5vh;
  right: 4vw;
}

#mobileDonateContent{
  height: 30vh;
  width: 100%;
  background-color: #e0f6ff;
  padding-top: 5vh;
}

#mobileDonateMessage{
  width: 80%;
  font-size: 5vw;
  text-align: center;
  display: block;
  margin: 0 auto;
}

#mobileDonateButton{
  width: 30vw;
  height: 8vh;
  font-size: 4vw;
  display: block;
  margin: 0 auto;
  border: none;
  background-color: #ff0000;
  margin-top: 2vh;
  color: white;
  outline: none;
  border-radius: 5%;
}

#mobileDonateButton:active{
  background-color: #020157;
}

#mobilemissioninfo{
  width: 90%;
  margin: 3vh auto 5vh auto;
  font-size: 4vw;
}

.mobileServiceRequestButton{
  background-color: #ff0000;
  display: grid;
  margin: 0 auto;
  width: 45vw;
  height: 8vh;
  font-size: 4vw;
  color: white;
  outline: none;
  border: none;
  border-radius: 5%;
}

.mobileServiceRequestButton:active{
  background-color: #020157;
}

.mobileServiceRequestForm{
  width: 100%;
  height: 80%;
  margin-top: 5vh;
}

#mobileContactInfo{
  width: 90%;
  font-size: 4vw;
  text-align: center;
  display: grid;
  margin: 3vh auto 0 auto;
}

#mobileContactForm{
  padding: 0;
  margin-top: 5vh;
  margin-bottom: 5vh;
}

